--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/fhir": "0.0.30",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.1",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "fhir.js": "0.0.20",
     "hammerjs": "^2.0.8",
     "ng-fhirjs": "^0.1.1",
     "rxjs": "^5.5.6",
